kubernetes/kuber_Network2/loadvalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: load 
spec:
  ports:
  - name: frontend
    protocol: TCP
    port: 80
  - name: backend
    protocol: TCP
    port: 8080
  selector:
    app: nginx-ingress-microk8s
  type: LoadBalancer
