kubernetes/kuber_Network2/serviceback.yaml
apiVersion: v1
kind: Service
metadata:
  name: back
spec:
  selector:
    app: multitool
  ports:
  - name: multitool
    protocol: TCP
    port: 8080 
  type: ClusterIP
