kubernetes/kuber_Network2/servicefront.yaml
apiVersion: v1
kind: Service
metadata:
  name: front 
spec:
  selector:
    app: nginx
  ports:
  - name: nginx
    protocol: TCP
    port: 80
  type: ClusterIP
